# asistant-data

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  MACOS_SETUP.md  README.md  SETUP.md  anexo_metodologico_marzo_2026.xlsx  categorias.yml  productos.yml  pyproject.toml  reporte_mensual_marzo_2026.md  requirements.txt  verify_performance.py
backend/: advisors.py  audit_config.py  categorical.py  category_discovery.py  category_insights.py  conversations.py  dashboard_metrics.py  engine.py  export_builders.py  failures.py  faqs.py  feedback.py  gaps_analysis.py  ingest.py  insights.py  loader.py  main.py  metrics.py  referrals.py  report_builder.py  report_helpers.py  reports.py  reports_deep.py  summary.py  temporal.py  text_analysis.py
docs/: data-storytelling.md  entorno.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: AdminPanel.tsx  AdvisorPanel.tsx  CategoriesDeepPanel.tsx  Charts.tsx  DateRangePicker.tsx  DownloadsPanel.tsx  Failures.tsx  FailuresDeepPanel.tsx  FaqsPanel.tsx  GapsPanel.tsx  Insights.tsx  KPIs.tsx  KpisPanel.tsx  MessageExplorer.tsx  ProductsDeepPanel.tsx  QualitativeInsights.tsx  Referrals.tsx  ReportsPanel.tsx  ReviewPanel.tsx  SummaryTable.tsx  SurveyPanel.tsx  UncategorizedPanel.tsx  WordCloud.tsx
frontend/src/components/ui/: accordion.tsx  badge.tsx  card.tsx  progress.tsx  separator.tsx
frontend/src/services/: api.ts
scripts/: generate_excel_report.py  test_exports.py
